--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -15,26 +15,28 @@
     "node": ">=25"
   },
   "devDependencies": {
+    "@types/aws-lambda": "^8.10.159",
     "@types/jest": "^29.5.12",
-    "@types/node": "^20.11.30",
     "@types/jsonwebtoken": "^9.0.2",
-    "aws-cdk": "2.179.0",
-    "esbuild": "~0.21",
+    "@types/node": "^20.11.30",
+    "aws-cdk": "^2.178.0",
     "cross-env": "^7.0.3",
+    "esbuild": "~0.21",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
     "typescript": "~5.4.3"
   },
   "dependencies": {
-    "jsonwebtoken": "^9.0.0",
     "@aws-sdk/client-dynamodb": "^3.540.0",
+    "@aws-sdk/client-lambda": "^3.971.0",
     "@aws-sdk/client-secrets-manager": "^3.540.0",
-    "@aws-sdk/client-sns": "^3.540.0",
     "@aws-sdk/client-ses": "^3.540.0",
-    "dotenv": "^10.0.0",
-    "aws-cdk-lib": "2.179.0",
+    "@aws-sdk/client-sns": "^3.540.0",
+    "aws-cdk-lib": "^2.178.0",
     "constructs": "^10.0.0",
+    "dotenv": "^10.0.0",
+    "jsonwebtoken": "^9.0.0",
     "source-map-support": "^0.5.21"
   }
 }
