--- a/packages/frontend-deploy/package.json
+++ b/packages/frontend-deploy/package.json
@@ -17,16 +17,20 @@
   "devDependencies": {
     "@types/jest": "^29.5.12",
     "@types/node": "^20.11.30",
+    "aws-cdk": "^2.178.0",
+    "cross-env": "^7.0.3",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.2",
-    "aws-cdk": "2.179.0",
-    "cross-env": "^7.0.3",
     "ts-node": "^10.9.2",
     "typescript": "~5.4.3"
   },
   "dependencies": {
-    "aws-cdk-lib": "2.179.0",
+    "@balena/dockerignore": "^1.0.2",
+    "aws-cdk-lib": "^2.178.0",
     "constructs": "^10.0.0",
+    "fs-extra": "^11.3.3",
+    "ignore": "^5.3.2",
+    "minimatch": "^9.0.3",
     "source-map-support": "^0.5.21"
   }
 }
