--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -39,6 +39,7 @@
     "constructs": "^10.0.0",
     "dotenv": "^10.0.0",
     "jsonwebtoken": "^9.0.0",
-    "source-map-support": "^0.5.21"
+    "source-map-support": "^0.5.21",
+    "uuid": "^13.0.0"
   }
 }
