--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -35,10 +35,12 @@
     "@aws-sdk/client-ses": "^3.540.0",
     "@aws-sdk/client-sns": "^3.540.0",
     "@aws-sdk/lib-dynamodb": "^3.540.0",
+    "@google/generative-ai": "^0.24.1",
     "aws-cdk-lib": "^2.178.0",
     "constructs": "^10.0.0",
     "dotenv": "^10.0.0",
     "jsonwebtoken": "^9.0.0",
+    "openai": "^4.35.0",
     "source-map-support": "^0.5.21",
     "uuid": "^13.0.0"
   }
